--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <style>
         .container {
-            width: 100%;
+            width: 80%;
             height: 650px;
             padding: 80px 10px;
             display: flex;
@@ -17,7 +17,7 @@
             align-items: center;
 
             background: #ccc;
-            overflow: hidden;
+            /* overflow: hidden; */
         }
 
         .book {
@@ -225,17 +225,17 @@
 
         @media only screen and (max-width: 1200px) {
             .breakfast ul li h3 {
-                font-size: 1.4vw;
+                font-size: 1.3vw;
             }
 
             .breakfast ul li h3 span {
-                font-size: 1.2vw;
+                font-size: 1.1vw;
                 font-weight: normal;
             }
 
             .breakfast ul li p {
 
-                font-size: 1.2vw;
+                font-size: 1.1vw;
                 font-weight: bold;
 
             }
@@ -356,7 +356,7 @@
     <div class="clearfix"></div>
 
 
-    <script >
+    <script>
         $("#book").on("mouseover", function () {
             $("#book").addClass('permahover');
         });
